# pose-estimation

./: CMakeLists.txt  README.md
include/andres/ilp/: gurobi-callback.hxx
include/pose/: detection.hxx  join.hxx  problem.hxx  solution.hxx  solver-callback.hxx  solver.hxx
src/andres/graphics/: viewer-opengl.cxx
src/pose/research/: io-hdf5.hxx  solver-callback.cxx  solver.cxx
src/pose/test/: problem.cxx  solver.cxx
